fix: remove clip-path feat: add lines

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <ul class="menu">
                 <li class="item"><a href="#">portfolio</a></li>
                 <li class="item"><a href="#">about</a></li>
-                <li class=""><div class="triangle"><div class="triangle-layer"></div></div></li>
+                <li class=""><div class="arrow">
+                    <div class="arrow-left">&nbsp;</div>
+                    <div class="arrow-right">&nbsp;</div>
+                </div></li>
                 <li class="item"><a href="#">blog</a></li>
                 <li class="item"><a href="#">get in touch</a></li>
             </ul>
@@ -24,35 +27,97 @@
     <main>
         <section class="hexagon-container">
             <div class="row">
-                <div class="hexagon hex1"></div>
-                <div class="hexagon hex2"></div>
-                <div class="hexagon hex3"></div>
-                <div class="hexagon hex4"></div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex1"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex2"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex3"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex4"></div>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="hexagon hex5"></div>
-                <div class="hexagon hex6"></div>
-                <div class="hexagon hex7"></div>
-                <div class="hexagon hex8"></div>
-                <div class="hexagon hex9"></div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex5"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex6"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex7"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex8"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex9"></div>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="hexagon hex10"></div>
-                <div class="hexagon hex11"></div>
-                <div class="hexagon hex12"></div>
-                <div class="hexagon hex13"></div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex10"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex11"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex12"></div>
+                    </div>
+                </div>
+                <div class="hex-layer-1">
+                    <div class="hex-layer-2">
+                        <div class="hex-layer-3 hex13"></div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="info">
             <article>
-                <div class="image">
+                <div class="hex-layer-1 smith-wrapper">
                     <div class="hex-layer-2">
-                        <div class="hex-layer-3"></div>
+                        <div class="hex-layer-3 smith"></div>
                     </div>
                 </div>
                 <h3>Smith Anderson</h3>
                 <p class="subtitle">Illustrator & Character Designer</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
+                <div class="social">
+                    <ul>
+                        <li><a href="https://www.facebook.com/" class="socail-links"><img src="./assets/images/social/Facebook.png" alt=""></a></li>
+                        <li><a href="https://twitter.com/" class="socail-links"><img src="./assets/images/social/Twitter.png" alt=""></a></li>
+                        <li><a href="https://aboutme.google.com/u/0/?referer=gplus" class="socail-links"><img src="./assets/images/social/Google.png" alt=""></a></li>
+                        <li><a href="https://www.pinterest.com/" class="socail-links"><img src="./assets/images/social/Pinterest.png" alt=""></a></li>
+                        <li><a href="https://www.linkedin.com/" class="socail-links"><img src="./assets/images/social/Linkedin.png" alt=""></a></li>
+                        <li><a href="https://dribbble.com/" class="socail-links"><img src="./assets/images/social/Dribbble.png" alt=""></a></li>
+                    </ul>
+                </div>
             </article>
         </section>
     </main>
@@ -70,8 +135,15 @@
             </fieldset>
             <button class="button-submit" type="submit">send</button>
         </form>
-        <!-- <p>Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p> -->
-        <div class="footer"></div>
+        <div class="right-info">
+            <p><strong>Quisque Hendrerit:</strong> purus dapi- bus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
+            <ul class="contacts">
+                <li><img src="./assets/images/contacts/location.png" width="15" alt=""><a href="https://www.google.com/maps/search/Elm+St.+14%2F05+Lost+City/@53.9262509,27.5946149,13z">Elm St. 14/05 Lost City</a></li>
+                <li><img src="./assets/images/contacts/phone.png" width="15" alt=""><a href="tel:+35283318635">+ 3528 331 86 35</a></li>
+                <li><img src="./assets/images/contacts/mail.png" width="17" alt=""><a href="mailto:info@hexalcorp.com">info@hexalcorp.com</a></li>
+            </ul>
+        </div>
+        <div class="footer"><p>© Copyright 2013 by PSDchat</p></div>
     </footer>
 </body>
 </html>
